Wed Dec  1 12:14:46 GMT 2004 (njh)
----------------------------------
  * libeclamav/message.c:	Part of rule 3 of paragraph 5.1 of RFC1521 was
		not being implemented, which meant that quoted-printable
		attachments with spaces before the '=' character at the end
		of soft breakon lines where not being correctly decoded

Tue Nov 30 16:47:54 CET 2004 (tk)
---------------------------------
  * improved support for BSDI BSD/OS (access to test environment provided by
    David Wu <dyw*iohk.com>)

Tue Nov 30 12:06:12 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Better handling for  unbalanced quotes in
			headers, e.g.  name="foo.doc

Mon Nov 29 13:25:25 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Fix potential crash if a temporary file can't be
	created
  * libclamav/mbox.c:	Disable the old continuation marker detection scheme

Mon Nov 29 00:23:55 CET 2004 (tk)
---------------------------------
  * clamdscan: add support for --move and --remove options

Sun Nov 28 21:08:44 GMT 2004 (njh)
----------------------------------
  * libclamav:	Email headers of only white space are no longer treated as
		the end of the headers

Sun Nov 28 16:30:18 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Allow lower case hex in quoted-printable
			messages

Sat Nov 27 21:55:45 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Changed some more strtok to cli_strtok

Sat Nov 27 19:53:33 CET 2004 (tk)
---------------------------------
  * libclamav/scanners.c: cli_scanrar: skip splitted files (patch by Andrey J.
			  Melnikoff (TEMHOTA) <temnota*kmv.ru>)

Sat Nov 27 14:40:55 GMT 2004 (njh)
----------------------------------
 * libclamav/mbox.c:	Honour section 7.2.6 of RFC1521

Sat Nov 27 13:18:42 GMT 2004 (njh)
----------------------------------
 * libclamav:	Assume x-uue is the same as x-uuencode
		If uudecoding fails and other possibilities have been