@@ -1,3 +1,8 @@
+Wed Dec  1 13:14:33 GMT 2004 (njh)
+----------------------------------
+  * libclamav/mbox.c:	Decode text/plain parts marked as being encoded,
+		reported by Trog
+
 Wed Dec  1 12:14:46 GMT 2004 (njh)
 ----------------------------------
   * libeclamav/message.c:	Part of rule 3 of paragraph 5.1 of RFC1521 was
